--- a/7_nn.ipynb
+++ b/7_nn.ipynb
@@ -221,6 +221,8 @@
     "Xs = scalerx.transform(X)\n",
     "\n",
     "YL = np.log10(Y)\n",
+    "# IMPORTANT we should use the same scaler for training and test set \n",
+    "# and the scaler should be fitted only using the training set to be fair  \n",
     "scalery = MinMaxScaler()\n",
     "scalery.fit(YL.reshape(-1,1))\n",
     "YLs = scalery.transform(YL.reshape(-1,1))\n",
