--- a/2_pca.ipynb
+++ b/2_pca.ipynb
@@ -343,6 +343,8 @@
     "    x = df.loc[:, features].values\n",
     "    y = df.loc[:,label].values\n",
     "    pca = PCA(n_components=n)\n",
+    "    # IMPORTANT in principle one shold use the same scaler for train and test\n",
+    "    # the sample apply to the PCA\n",
     "    x_t = pca.fit_transform(StandardScaler().fit_transform(x))\n",
     "    x_train, x_test, y_train, y_test = train_test_split(\\\n",
     "        x_t, y, test_size=0.2, random_state=0)\n",
