--- a/5_rf.ipynb
+++ b/5_rf.ipynb
@@ -138,6 +138,8 @@
     "testaccuracy = []\n",
     "trainaccuracy = []\n",
     "for maxdepth in range(1, 10):\n",
+    "    # Maybe you want to use a validation set to find the best max depth\n",
+    "    # and other hyperparameters instead of using the test set\n",
     "    rf = RandomForestClassifier(n_estimators=bestnoftrees, \\\n",
     "                            max_depth=maxdepth, \\\n",
     "                            random_state=42)\n",
