--- a/4_pls.ipynb
+++ b/4_pls.ipynb
@@ -81,6 +81,10 @@
     "percdiff = []\n",
     "for n in range(1, 20):\n",
     "    pls = PLSRegression(n_components=n)\n",
+    "    # IMPORTANT to be fair we should use only the training set to\n",
+    "    # perform the K-folds cross validation and select the \n",
+    "    # best hyperparameters, but for simplicity we will use the\n",
+    "    # whole dataset\n",
     "    y_pred = cross_val_predict(pls, X, y, cv=10)\n",
     "    mse = mean_squared_error(y, y_pred)\n",
     "    r2 = r2_score(y, y_pred)\n",
