--- a/Exercises/Colab/2025/Ex_step3.ipynb
+++ b/Exercises/Colab/2025/Ex_step3.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,8 +633,16 @@
     "# TRY TO REMOVE SOME LAYERS OR NEURONS\n",
     "model.add(Dense(64, activation='relu'))\n",
     "# Try to add l2 regularization\n",
-    "# model.add(Dense(64, activation='relu', kernel_regularizer='l2'))\n",
+    "# L2 Regularization. This adds a small \"penalty\" to the \n",
+    "# model for having large weights (coefficients). It's \n",
+    "# a classic method that discourages the model from \n",
+    "# relying too heavily on any single feature and helps it \n",
+    "# find a simpler, more general solution.\n",
+    "# model.add(Dense(64, activation='relu', kernel_regularizer=l2(0.001)))\n",
     "model.add(Dense(32, activation='relu'))\n",
+    "# *** ADDED DROPOUT ***\n",
+    "# This layer \"drops\" 50% of its neurons randomly during training,\n",
+    "# forcing the model to learn more robust, general patterns.\n",
     "#model.add(Dropout(0.5))  # Dropout layer with a 50% dropout rate\n",
     "model.add(Dense(1, activation='linear'))\n",
     "model.compile(loss='mean_squared_error', \\\n",
@@ -744,7 +752,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "pysr",
+   "display_name": "tf_gpu_env",
    "language": "python",
    "name": "python3"
   },
@@ -758,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
