--- a/Exercises/Colab/2025/TODO/Ex_last_2.ipynb
+++ b/Exercises/Colab/2025/TODO/Ex_last_2.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,10 @@
     "adam = Adam(learning_rate=0.001)\n",
     "\n",
     "start = timeit.default_timer()\n",
-    "\n",
+    "# Try a \"funnel\" shape (e.g., 128 -> 64 -> 32). \n",
+    "# Feature Distillation: It forces the network to compress \n",
+    "# information, theoretically keeping only the most \n",
+    "# important high-level features as it gets deeper.\n",
     "model = Sequential()\n",
     "model.add(InputLayer(shape=(X_train_np.shape[1],)))\n",
     "# L2 Regularization. This adds a small \"penalty\" to the \n",
